--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
+	"terminal.integrated.shell.windows": "C:/WINDOWS/System32/cmd.exe",
 	"code-runner.executorMap": {
 		//在$fileName后跟需要联合编译的文件名！
 		"cpp": "cd $dir && cl /EHsc /nologo $fileName  && $dir$fileNameWithoutExt.exe && del $dir$fileNameWithoutExt.obj $dir$fileNameWithoutExt.exe",
 		"c": "cd $dir && cl /EHsc /nologo $fileName && $dir$fileNameWithoutExt.exe && del $dir$fileNameWithoutExt.obj $dir$fileNameWithoutExt.exe"
-	},
+	}
 }
