--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,14 +5,17 @@
             "label": "C/C++: cl.exe build active file",
             "command": "cl.exe",
             "args": [
-                "/Zi",
-                "/EHsc",
+                "/EHsc", //异常捕获参数
+                "/Z7",
+                "/Fo:",
+                "${fileDirname}\\build\\" ,
                 "/Fe:",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "${fileDirname}\\build\\${fileBasenameNoExtension}.exe",
                 "${file}",
                 // 在这里依格式加入要联合调试的文件名！
                 // "${fileDirname}/file1.c",
                 // "${fileDirname}/file2.c",
+
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
