--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,48 @@
 	"terminal.integrated.shell.windows": "C:/WINDOWS/System32/cmd.exe",
 	"code-runner.executorMap": {
 		//在$fileName后跟需要联合编译的文件名！
-		"cpp": "cd $dir && cl /EHsc /nologo $fileName  && $dir$fileNameWithoutExt.exe && del $dir$fileNameWithoutExt.obj $dir$fileNameWithoutExt.exe",
-		"c": "cd $dir && cl /EHsc /nologo $fileName && $dir$fileNameWithoutExt.exe && del $dir$fileNameWithoutExt.obj $dir$fileNameWithoutExt.exe"
+		"cpp": "cd $dir && cl /EHsc /nologo $fileName && $dir$fileNameWithoutExt.exe  && del *.obj *.exe && echo. && pause && cls",
+		"c": "cd $dir && cl /EHsc /nologo $fileName && $dir$fileNameWithoutExt.exe && del *.obj *.exe && echo. && pause && cls"
+	},
+	"files.associations": {
+		"*.m": "matlab",
+		"atomic": "cpp",
+		"cmath": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"cwchar": "cpp",
+		"exception": "cpp",
+		"initializer_list": "cpp",
+		"ios": "cpp",
+		"iosfwd": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"iterator": "cpp",
+		"limits": "cpp",
+		"memory": "cpp",
+		"new": "cpp",
+		"ostream": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"system_error": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"typeinfo": "cpp",
+		"utility": "cpp",
+		"xfacet": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xlocinfo": "cpp",
+		"xlocnum": "cpp",
+		"xmemory": "cpp",
+		"xstddef": "cpp",
+		"xstring": "cpp",
+		"xtr1common": "cpp",
+		"xutility": "cpp"
 	}
 }
